force-app/main/default/objects/DevCore__Bisnode_Settings__c/DevCore__Bisnode_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Bisnode Settings</label>
</CustomObject>