force-app/main/default/objects/DevCore__Bisnode_Settings__c/fields/DevCore__Activate_Bisnode_Select__c.field-meta.xml
<CustomField>
    <fullName>DevCore__Activate_Bisnode_Select__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Activate Bisnode Select</label>
    <type>Checkbox</type>
</CustomField>