force-app/main/default/objects/DevCore__Bisnode_Settings__c/fields/DevCore__Bisnode_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>DevCore__Bisnode_Account_Number__c</fullName>
    <defaultValue>&quot;BISNODE-ACC-0001&quot;</defaultValue>
    <label>Bisnode Account Number</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
</CustomField>