force-app/main/default/objects/DevCore__Bisnode_Settings__c/fields/DevCore__Bisnode_Display_Coins__c.field-meta.xml
<CustomField>
    <fullName>DevCore__Bisnode_Display_Coins__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Coins on Link/Update Buttons</label>
    <type>Checkbox</type>
</CustomField>