force-app/main/default/objects/DevCore__Bisnode_Settings__c/fields/DevCore__Bisnode_Only_Write_to_Updated_Fields__c.field-meta.xml
<CustomField>
    <fullName>DevCore__Bisnode_Only_Write_to_Updated_Fields__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Only Write to Updated Fields</label>
    <type>Checkbox</type>
</CustomField>