force-app/main/default/objects/DevCore__Bisnode_Settings__c/fields/DevCore__Produce_Bisnode_Error_Records__c.field-meta.xml
<CustomField>
    <fullName>DevCore__Produce_Bisnode_Error_Records__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If this is disabled you will not be able to provide sufficient error information to Devcore for troubleshooting</description>
    <inlineHelpText>If this is disabled you will not be able to provide sufficient error information to Devcore for troubleshooting</inlineHelpText>
    <label>Produce Bisnode Error Records</label>
    <type>Checkbox</type>
</CustomField>